==============
lxml changelog
==============

3.0beta1 (??)
======================

Features added
--------------

Bugs fixed
----------

Other changes
-------------

* The code was adapted to work with the upcoming libxml2 2.9.0 release.


3.0alpha2 (2012-08-23)
======================

Features added
--------------

* The ``.iter()`` method of elements now accepts ``tag`` arguments like
  ``"{*}name"`` to search for elements with a given local name in any
  namespace. With this addition, all combinations of wildcards now work
  as expected:
  ``"{ns}name"``, ``"{}name"``, ``"{*}name"``, ``"{ns}*"``, ``"{}*"``
  and ``"{*}*"``.  Note that ``"name"`` is equivalent to ``"{}name"``,
  but ``"*"`` is ``"{*}*"``.
  The same change applies to the ``.getiterator()``, ``.itersiblings()``,
  ``.iterancestors()``, ``.iterdescendants()``, ``.iterchildren()``
  and ``.itertext()`` methods;the ``strip_attributes()``,
  ``strip_elements()`` and ``strip_tags()`` functions as well as the
  ``iterparse()`` class.

* C14N allows specifying the inclusive prefixes to be promoted
  to top-level during exclusive serialisation.

Bugs fixed
----------

* Passing long Unicode strings into the ``feed()`` parser interface
  failed to read the entire string.

Other changes
-------------


3.0alpha1 (2012-07-31)
======================

Features added
--------------

* Initial support for building in PyPy (through cpyext).

* DTD objects gained an API that allows read access to their
  declarations.

* ``xpathgrep.py`` gained support for parsing line-by-line (e.g.
  from grep output) and for surrounding the output with a new root
  tag.

* ``E-factory`` in ``lxml.builder`` accepts subtypes of known data
  types (such as string subtypes) when building elements around them.

* Tree iteration and ``iterparse()`` with a selective ``tag``
  argument supports passing a set of tags.  Tree nodes will be
  returned by the iterators if they match any of the tags.

Bugs fixed
----------
